[project]
name = "ai-agent-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextual-client>=0.8.0",
    "fastapi>=0.119.0",
    "langchain>=0.3.27",
    "langchain-arcade>=1.4.4",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-redis>=0.2.4",
    "langchain-tavily",
    "langgraph>=0.6.10",
    "langgraph-checkpoint>=2.1.2",
    "langgraph-checkpoint-redis>=0.1.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "pypdf",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sse-starlette>=3.0.2",
    "tavily-python>=0.7.12",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
